# dde-file-manager-extensions

./: .gitignore  CMakeLists.txt
.reuse/: dep5
assets/configs/: org.deepin.dde.file-manager.diskencrypt.json
assets/polkit/: com.deepin.filemanager.daemon.diskencrypt.policy
debian/: changelog  control  copyright  dfmplugin-cooperation.install  dfmplugin-disk-encrypt.install  dfmplugin-disk-encrypt.postinst  dfmplugin-disk-encrypt1.install
src/: CMakeLists.txt
src/dde-desktop/: CMakeLists.txt
src/dde-desktop/ddplugin-videowallpaper/: CMakeLists.txt  ddplugin_videowallpaper_global.h  videoproxy.cpp  videoproxy.h  videowallpapermenuscene.cpp  videowallpapermenuscene.h  videowallpaperplugin.cpp  videowallpaperplugin.h  wallpaperconfig.cpp  wallpaperconfig.h  wallpaperconfig_p.h  wallpaperengine.cpp  wallpaperengine.h  wallpaperengine_p.h
src/dde-file-manager/: CMakeLists.txt
src/dde-file-manager-daemon/: CMakeLists.txt
src/dde-file-manager-daemon/daemonplugin-file-encrypt/: CMakeLists.txt  daemonplugin_file_encrypt_global.h  globaltypesdefine.h
src/dde-file-manager-daemon/daemonplugin-file-encrypt/dbus/: diskencryptdbus.cpp  diskencryptdbus.h
src/dde-file-manager-daemon/daemonplugin-file-encrypt/encrypt/: diskencrypt.cpp  diskencrypt.h  encryptworker.cpp  encryptworker.h  pwdencrypt.cpp  pwdencrypt.h
src/dde-file-manager/dfmplugin-cooperation/: CMakeLists.txt  cooperationplugin.cpp
src/dde-file-manager/dfmplugin-cooperation/dialogs/: filetransfersettingsdialog.cpp
src/dde-file-manager/dfmplugin-cooperation/menu/: cooperationmenuscene.cpp
src/dde-file-manager/dfmplugin-disk-encrypt-entry/: CMakeLists.txt  dfmplugin_disk_encrypt_global.h  diskencryptentry.json  plugin_diskencryptentry.cpp  plugin_diskencryptentry.h
src/dde-file-manager/dfmplugin-disk-encrypt-entry/events/: eventshandler.cpp  eventshandler.h
src/dde-file-manager/dfmplugin-disk-encrypt-entry/gui/: acquirepindialog.cpp  acquirepindialog.h  chgpassphrasedialog.cpp  chgpassphrasedialog.h  decryptparamsinputdialog.cpp  decryptparamsinputdialog.h  encryptparamsinputdialog.cpp  encryptparamsinputdialog.h  encryptprocessdialog.cpp  encryptprocessdialog.h  encryptprogressdialog.cpp  encryptprogressdialog.h  unlockpartitiondialog.cpp
src/dde-file-manager/dfmplugin-disk-encrypt-entry/menu/: diskencryptmenuscene.cpp  diskencryptmenuscene.h
src/dde-file-manager/dfmplugin-disk-encrypt-entry/utils/: encryptutils.cpp  encryptutils.h
src/dde-file-manager/dfmplugin-encrypt-manager/: CMakeLists.txt  encrypt_manager_global.h  encryptmanager.h
src/dde-file-manager/dfmplugin-encrypt-manager/events/: eventreceiver.cpp  eventreceiver.h
src/dde-file-manager/dfmplugin-encrypt-manager/tpm/: tpmwork.cpp  tpmwork.h  tpmworkbyprocess.cpp  tpmworkbyprocess.h
src/demo/dfmplugin-encrypt-manager-demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/service/: CMakeLists.txt
src/service/diskencrypt/: CMakeLists.txt
translations/: cooperation-transfer.ts  cooperation-transfer_ady.ts  cooperation-transfer_af.ts  cooperation-transfer_am_ET.ts  cooperation-transfer_ar.ts  cooperation-transfer_ast.ts  cooperation-transfer_az.ts  cooperation-transfer_bg.ts  cooperation-transfer_bn.ts  cooperation-transfer_bo.ts  cooperation-transfer_bqi.ts  cooperation-transfer_br.ts  cooperation-transfer_ca.ts  cooperation-transfer_cs.ts  cooperation-transfer_da.ts  cooperation-transfer_de.ts  cooperation-transfer_el.ts  cooperation-transfer_en_AU.ts  cooperation-transfer_en_GB.ts  cooperation-transfer_eo.ts  cooperation-transfer_es.ts  cooperation-transfer_et.ts  cooperation-transfer_fa.ts  cooperation-transfer_fi.ts  cooperation-transfer_fil.ts  cooperation-transfer_fr.ts  cooperation-transfer_gl_ES.ts  cooperation-transfer_he.ts  cooperation-transfer_hi_IN.ts  cooperation-transfer_hr.ts  cooperation-transfer_hu.ts  cooperation-transfer_hy.ts  cooperation-transfer_id.ts  cooperation-transfer_it.ts  cooperation-transfer_ja.ts  cooperation-transfer_ka.ts  cooperation-transfer_kab.ts  cooperation-transfer_km_KH.ts  cooperation-transfer_kn_IN.ts  cooperation-transfer_ko.ts  (+120 more)
